# crole

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  ATTRIBUTION.md  CMakeLists.txt  Makefile  README.md  SConstruct  appveyor.yml  crole.scons  run-benchmarks.sh  run-tests.sh
.github/workflows/: codeql-analysis.yml
bench/: CMakeLists.txt  Makefile  bench-simple.c  bench-std-vector.cpp  bench-vec.c
bench/src/: bench-crole-dllist.c  bench-crole-vec.c  bench-dllist.c  bench-std-list.cpp  bench-std-vector.cpp
include/: dllist.h
include/crole/: dllist.h  ref.h  vec.h
proj/vs/: .gitignore  crole.sln
proj/vs/crole/: crole.vcxproj  crole.vcxproj.filters
proj/vs/crole-bench-dllist/: crole-bench-dllist.vcxproj  crole-bench-dllist.vcxproj.filters
proj/vs/crole-bench-std-list/: crole-bench-std-list.vcxproj  crole-bench-std-list.vcxproj.filters
proj/vs/crole-test/: crole-test.vcxproj  crole-test.vcxproj.filters
src/: dllist.c  ref.c  vec.c
test/: .gitignore  CMakeLists.txt  Makefile  test_dllist.c  test_ref.c  test_vec.c  tests.h
test/include/: tests.h
test/src/: main.c  test_dllist.c  test_globals.h  test_ref.c  tests.h
